jsx-parse.js
// module.exports = // Generated by Peggy 2.0.1.
export { parse as default, SyntaxError }
const { parse, SyntaxError } =
	//
	// https://peggyjs.org/
	(function () {
		"use strict"

		function peg$subclass(child, parent) {
			function C() {
				this.constructor = child
			}
			C.prototype = parent.prototype
			child.prototype = new C()
		}

		function peg$SyntaxError(message, expected, found, location) {
			var self = Error.call(this, message)
			// istanbul ignore next Check is a necessary evil to support older environments
			if (Object.setPrototypeOf) {
				Object.setPrototypeOf(self, peg$SyntaxError.prototype)
			}
			self.expected = expected
			self.found = found
			self.location = location
			self.name = "SyntaxError"
			return self
		}

		peg$subclass(peg$SyntaxError, Error)

		function peg$padEnd(str, targetLength, padString) {
			padString = padString || " "
			if (str.length > targetLength) {
				return str
			}
			targetLength -= str.length
			padString += padString.repeat(targetLength)
			return str + padString.slice(0, targetLength)
		}

		peg$SyntaxError.prototype.format = function (sources) {
			var str = "Error: " + this.message
			if (this.location) {
				var src = null
				var k
				for (k = 0; k < sources.length; k++) {
					if (sources[k].source === this.location.source) {
						src = sources[k].text.split(/\r\n|\n|\r/g)
						break
					}
				}
				var s = this.location.start
				var loc = this.location.source + ":" + s.line + ":" + s.column
				if (src) {
					var e = this.location.end
					var filler = peg$padEnd("", s.line.toString().length, " ")
					var line = src[s.line - 1]
					var last = s.line === e.line ? e.column : line.length + 1
					var hatLen = last - s.column || 1
					str +=
						"\n --> " +
						loc +
						"\n" +
						filler +
						" |\n" +
						s.line +
						" | " +
						line +
						"\n" +
						filler +
						" | " +
						peg$padEnd("", s.column - 1, " ") +
						peg$padEnd("", hatLen, "^")
				} else {
					str += "\n at " + loc
				}
			}
			return str
		}

		peg$SyntaxError.buildMessage = function (expected, found) {
			var DESCRIBE_EXPECTATION_FNS = {
				literal: function (expectation) {
					return '"' + literalEscape(expectation.text) + '"'
				},

				class: function (expectation) {
					var escapedParts = expectation.parts.map(function (part) {
						return Array.isArray(part) ? classEscape(part[0]) + "-" + classEscape(part[1]) : classEscape(part)
					})

					return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]"
				},

				any: function () {
					return "any character"
				},

				end: function () {
					return "end of input"
				},

				other: function (expectation) {
					return expectation.description
				},
			}

			function hex(ch) {
				return ch.charCodeAt(0).toString(16).toUpperCase()
			}

			function literalEscape(s) {
				return s
					.replace(/\\/g, "\\\\")
					.replace(/"/g, '\\"')
					.replace(/\0/g, "\\0")
					.replace(/\t/g, "\\t")
					.replace(/\n/g, "\\n")
					.replace(/\r/g, "\\r")
					.replace(/[\x00-\x0F]/g, function (ch) {
						return "\\x0" + hex(ch)
					})
					.replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
						return "\\x" + hex(ch)
					})
			}

			function classEscape(s) {
				return s
					.replace(/\\/g, "\\\\")
					.replace(/\]/g, "\\]")
					.replace(/\^/g, "\\^")
					.replace(/-/g, "\\-")
					.replace(/\0/g, "\\0")
					.replace(/\t/g, "\\t")
					.replace(/\n/g, "\\n")
					.replace(/\r/g, "\\r")
					.replace(/[\x00-\x0F]/g, function (ch) {
						return "\\x0" + hex(ch)
					})
					.replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
						return "\\x" + hex(ch)
					})
			}

			function describeExpectation(expectation) {
				return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
			}

			function describeExpected(expected) {
				var descriptions = expected.map(describeExpectation)
				var i, j

				descriptions.sort()

				if (descriptions.length > 0) {
					for (i = 1, j = 1; i < descriptions.length; i++) {
						if (descriptions[i - 1] !== descriptions[i]) {
							descriptions[j] = descriptions[i]
							j++
						}
					}
					descriptions.length = j
				}

				switch (descriptions.length) {
					case 1:
						return descriptions[0]

					case 2:
						return descriptions[0] + " or " + descriptions[1]

					default:
						return descriptions.slice(0, -1).join(", ") + ", or " + descriptions[descriptions.length - 1]
				}
			}

			function describeFound(found) {
				return found ? '"' + literalEscape(found) + '"' : "end of input"
			}

			return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found."
		}

		function peg$parse(input, options) {
			options = options !== undefined ? options : {}

			var peg$FAILED = {}
			var peg$source = options.grammarSource

			var peg$startRuleFunctions = { __Start: peg$parse__Start }
			var peg$startRuleFunction = peg$parse__Start

			var peg$c0 = "PLACEHOLDER"
			var peg$c1 = "["
			var peg$c2 = "]"
			var peg$c3 = "<"
			var peg$c4 = "/>"
			var peg$c5 = ">"
			var peg$c6 = "</"
			var peg$c7 = "="
			var peg$c8 = '"'
			var peg$c9 = "'"
			var peg$c10 = "0"

			var peg$r0 = /^[1-9]/
			var peg$r1 = /^[0-9]/
			var peg$r2 = /^[a-zA-Z0-9_\-]/
			var peg$r3 = /^[ \t\r\n]/

			var peg$e0 = peg$literalExpectation("PLACEHOLDER", false)
			var peg$e1 = peg$literalExpectation("[", false)
			var peg$e2 = peg$literalExpectation("]", false)
			var peg$e3 = peg$literalExpectation("<", false)
			var peg$e4 = peg$literalExpectation("/>", false)
			var peg$e5 = peg$literalExpectation(">", false)
			var peg$e6 = peg$literalExpectation("</", false)
			var peg$e7 = peg$anyExpectation()
			var peg$e8 = peg$literalExpectation("=", false)
			var peg$e9 = peg$literalExpectation('"', false)
			var peg$e10 = peg$literalExpectation("'", false)
			var peg$e11 = peg$literalExpectation("0", false)
			var peg$e12 = peg$classExpectation([["1", "9"]], false, false)
			var peg$e13 = peg$classExpectation([["0", "9"]], false, false)
			var peg$e14 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false)
			var peg$e15 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false)

			var peg$f0 = function ($) {
				return $
			}
			var peg$f1 = function (id2, i) {
				return id2 === id
			}
			var peg$f2 = function (id2, i) {
				return inserts[i]
			}
			var peg$f3 = function (Tag, props) {
				return props
			}
			var peg$f4 = function (Tag, props) {
				return createElement(Tag, props)
			}
			var peg$f5 = function (Tag, props) {
				return props
			}
			var peg$f6 = function (Tag, props, children, Close) {
				return Tag === Close
			}
			var peg$f7 = function (Tag, props, children, Close) {
				return createElement(Tag, props, ...children)
			}
			var peg$f8 = function (attr) {
				return attr
			}
			var peg$f9 = function (rest, last, spread) {
				return Object.assign({}, ...rest, last, spread)
			}
			var peg$f10 = function (name, value) {
				return { [name]: value }
			}
			var peg$f11 = function (text) {
				return Number.isSafeInteger(Number(text))
			}
			var peg$f12 = function (text) {
				return Number(text)
			}
			var peg$currPos = 0
			var peg$savedPos = 0
			var peg$posDetailsCache = [{ line: 1, column: 1 }]
			var peg$maxFailPos = 0
			var peg$maxFailExpected = []
			var peg$silentFails = 0

			var peg$result

			if ("startRule" in options) {
				if (!(options.startRule in peg$startRuleFunctions)) {
					throw new Error("Can't start parsing from rule \"" + options.startRule + '".')
				}

				peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
			}

			function text() {
				return input.substring(peg$savedPos, peg$currPos)
			}

			function offset() {
				return peg$savedPos
			}

			function range() {
				return {
					source: peg$source,
					start: peg$savedPos,
					end: peg$currPos,
				}
			}

			function location() {
				return peg$computeLocation(peg$savedPos, peg$currPos)
			}

			function expected(description, location) {
				location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos)

				throw peg$buildStructuredError(
					[peg$otherExpectation(description)],
					input.substring(peg$savedPos, peg$currPos),
					location,
				)
			}

			function error(message, location) {
				location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos)

				throw peg$buildSimpleError(message, location)
			}

			function peg$literalExpectation(text, ignoreCase) {
				return { type: "literal", text: text, ignoreCase: ignoreCase }
			}

			function peg$classExpectation(parts, inverted, ignoreCase) {
				return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase }
			}

			function peg$anyExpectation() {
				return { type: "any" }
			}

			function peg$endExpectation() {
				return { type: "end" }
			}

			function peg$otherExpectation(description) {
				return { type: "other", description: description }
			}

			function peg$computePosDetails(pos) {
				var details = peg$posDetailsCache[pos]
				var p

				if (details) {
					return details
				} else {
					p = pos - 1
					while (!peg$posDetailsCache[p]) {
						p--
					}

					details = peg$posDetailsCache[p]
					details = {
						line: details.line,
						column: details.column,
					}

					while (p < pos) {
						if (input.charCodeAt(p) === 10) {
							details.line++
							details.column = 1
						} else {
							details.column++
						}

						p++
					}

					peg$posDetailsCache[pos] = details

					return details
				}
			}

			function peg$computeLocation(startPos, endPos) {
				var startPosDetails = peg$computePosDetails(startPos)
				var endPosDetails = peg$computePosDetails(endPos)

				return {
					source: peg$source,
					start: {
						offset: startPos,
						line: startPosDetails.line,
						column: startPosDetails.column,
					},
					end: {
						offset: endPos,
						line: endPosDetails.line,
						column: endPosDetails.column,
					},
				}
			}

			function peg$fail(expected) {
				if (peg$currPos < peg$maxFailPos) {
					return
				}

				if (peg$currPos > peg$maxFailPos) {
					peg$maxFailPos = peg$currPos
					peg$maxFailExpected = []
				}

				peg$maxFailExpected.push(expected)
			}

			function peg$buildSimpleError(message, location) {
				return new peg$SyntaxError(message, null, null, location)
			}

			function peg$buildStructuredError(expected, found, location) {
				return new peg$SyntaxError(peg$SyntaxError.buildMessage(expected, found), expected, found, location)
			}

			function peg$parse__Start() {
				var s0, s1, s2, s3

				s0 = peg$currPos
				s1 = peg$parse__()
				s2 = peg$parseElement()
				if (s2 !== peg$FAILED) {
					s3 = peg$parse__()
					peg$savedPos = s0
					s0 = peg$f0(s2)
				} else {
					peg$currPos = s0
					s0 = peg$FAILED
				}

				return s0
			}

			function peg$parseInsert() {
				var s0, s1, s2, s3, s4, s5, s6, s7, s8

				s0 = peg$currPos
				if (input.substr(peg$currPos, 11) === peg$c0) {
					s1 = peg$c0
					peg$currPos += 11
				} else {
					s1 = peg$FAILED
					if (peg$silentFails === 0) {
						peg$fail(peg$e0)
					}
				}
				if (s1 !== peg$FAILED) {
					if (input.charCodeAt(peg$currPos) === 91) {
						s2 = peg$c1
						peg$currPos++
					} else {
						s2 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e1)
						}
					}
					if (s2 !== peg$FAILED) {
						s3 = peg$parseInt()
						if (s3 !== peg$FAILED) {
							if (input.charCodeAt(peg$currPos) === 93) {
								s4 = peg$c2
								peg$currPos++
							} else {
								s4 = peg$FAILED
								if (peg$silentFails === 0) {
									peg$fail(peg$e2)
								}
							}
							if (s4 !== peg$FAILED) {
								if (input.charCodeAt(peg$currPos) === 91) {
									s5 = peg$c1
									peg$currPos++
								} else {
									s5 = peg$FAILED
									if (peg$silentFails === 0) {
										peg$fail(peg$e1)
									}
								}
								if (s5 !== peg$FAILED) {
									s6 = peg$parseInt()
									if (s6 !== peg$FAILED) {
										if (input.charCodeAt(peg$currPos) === 93) {
											s7 = peg$c2
											peg$currPos++
										} else {
											s7 = peg$FAILED
											if (peg$silentFails === 0) {
												peg$fail(peg$e2)
											}
										}
										if (s7 !== peg$FAILED) {
											peg$savedPos = peg$currPos
											s8 = peg$f1(s3, s6)
											if (s8) {
												s8 = undefined
											} else {
												s8 = peg$FAILED
											}
											if (s8 !== peg$FAILED) {
												peg$savedPos = s0
												s0 = peg$f2(s3, s6)
											} else {
												peg$currPos = s0
												s0 = peg$FAILED
											}
										} else {
											peg$currPos = s0
											s0 = peg$FAILED
										}
									} else {
										peg$currPos = s0
										s0 = peg$FAILED
									}
								} else {
									peg$currPos = s0
									s0 = peg$FAILED
								}
							} else {
								peg$currPos = s0
								s0 = peg$FAILED
							}
						} else {
							peg$currPos = s0
							s0 = peg$FAILED
						}
					} else {
						peg$currPos = s0
						s0 = peg$FAILED
					}
				} else {
					peg$currPos = s0
					s0 = peg$FAILED
				}

				return s0
			}

			function peg$parseElement() {
				var s0

				s0 = peg$parseVoidElement()
				if (s0 === peg$FAILED) {
					s0 = peg$parseContentElement()
				}

				return s0
			}

			function peg$parseVoidElement() {
				var s0, s1, s2, s3, s4, s5

				s0 = peg$currPos
				if (input.charCodeAt(peg$currPos) === 60) {
					s1 = peg$c3
					peg$currPos++
				} else {
					s1 = peg$FAILED
					if (peg$silentFails === 0) {
						peg$fail(peg$e3)
					}
				}
				if (s1 !== peg$FAILED) {
					s2 = peg$parseTagName()
					if (s2 !== peg$FAILED) {
						s3 = peg$currPos
						s4 = peg$parse_()
						if (s4 !== peg$FAILED) {
							s5 = peg$parseAttrs()
							peg$savedPos = s3
							s3 = peg$f3(s2, s5)
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
						if (s3 === peg$FAILED) {
							s3 = null
						}
						if (input.substr(peg$currPos, 2) === peg$c4) {
							s4 = peg$c4
							peg$currPos += 2
						} else {
							s4 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e4)
							}
						}
						if (s4 !== peg$FAILED) {
							peg$savedPos = s0
							s0 = peg$f4(s2, s3)
						} else {
							peg$currPos = s0
							s0 = peg$FAILED
						}
					} else {
						peg$currPos = s0
						s0 = peg$FAILED
					}
				} else {
					peg$currPos = s0
					s0 = peg$FAILED
				}

				return s0
			}

			function peg$parseContentElement() {
				var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9

				s0 = peg$currPos
				if (input.charCodeAt(peg$currPos) === 60) {
					s1 = peg$c3
					peg$currPos++
				} else {
					s1 = peg$FAILED
					if (peg$silentFails === 0) {
						peg$fail(peg$e3)
					}
				}
				if (s1 !== peg$FAILED) {
					s2 = peg$parseTagName()
					if (s2 !== peg$FAILED) {
						s3 = peg$currPos
						s4 = peg$parse_()
						if (s4 !== peg$FAILED) {
							s5 = peg$parseAttrs()
							peg$savedPos = s3
							s3 = peg$f5(s2, s5)
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
						if (s3 === peg$FAILED) {
							s3 = null
						}
						if (input.charCodeAt(peg$currPos) === 62) {
							s4 = peg$c5
							peg$currPos++
						} else {
							s4 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e5)
							}
						}
						if (s4 !== peg$FAILED) {
							s5 = []
							s6 = peg$parseChild()
							while (s6 !== peg$FAILED) {
								s5.push(s6)
								s6 = peg$parseChild()
							}
							if (input.substr(peg$currPos, 2) === peg$c6) {
								s6 = peg$c6
								peg$currPos += 2
							} else {
								s6 = peg$FAILED
								if (peg$silentFails === 0) {
									peg$fail(peg$e6)
								}
							}
							if (s6 !== peg$FAILED) {
								s7 = peg$parseTagName()
								if (s7 !== peg$FAILED) {
									if (input.charCodeAt(peg$currPos) === 62) {
										s8 = peg$c5
										peg$currPos++
									} else {
										s8 = peg$FAILED
										if (peg$silentFails === 0) {
											peg$fail(peg$e5)
										}
									}
									if (s8 !== peg$FAILED) {
										peg$savedPos = peg$currPos
										s9 = peg$f6(s2, s3, s5, s7)
										if (s9) {
											s9 = undefined
										} else {
											s9 = peg$FAILED
										}
										if (s9 !== peg$FAILED) {
											peg$savedPos = s0
											s0 = peg$f7(s2, s3, s5, s7)
										} else {
											peg$currPos = s0
											s0 = peg$FAILED
										}
									} else {
										peg$currPos = s0
										s0 = peg$FAILED
									}
								} else {
									peg$currPos = s0
									s0 = peg$FAILED
								}
							} else {
								peg$currPos = s0
								s0 = peg$FAILED
							}
						} else {
							peg$currPos = s0
							s0 = peg$FAILED
						}
					} else {
						peg$currPos = s0
						s0 = peg$FAILED
					}
				} else {
					peg$currPos = s0
					s0 = peg$FAILED
				}

				return s0
			}

			function peg$parseTagName() {
				var s0

				s0 = peg$parseInsert()
				if (s0 === peg$FAILED) {
					s0 = peg$parseTAG_NAME()
				}

				return s0
			}

			function peg$parseChild() {
				var s0

				s0 = peg$parseElement()
				if (s0 === peg$FAILED) {
					s0 = peg$parseInsert()
					if (s0 === peg$FAILED) {
						s0 = peg$parseChildText()
					}
				}

				return s0
			}

			function peg$parseChildText() {
				var s0, s1, s2, s3, s4, s5, s6, s7

				s0 = peg$currPos
				s1 = []
				s2 = peg$currPos
				s3 = peg$currPos
				peg$silentFails++
				s4 = peg$currPos
				if (input.substr(peg$currPos, 2) === peg$c6) {
					s5 = peg$c6
					peg$currPos += 2
				} else {
					s5 = peg$FAILED
					if (peg$silentFails === 0) {
						peg$fail(peg$e6)
					}
				}
				if (s5 !== peg$FAILED) {
					s6 = peg$parseTagName()
					if (s6 !== peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 62) {
							s7 = peg$c5
							peg$currPos++
						} else {
							s7 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e5)
							}
						}
						if (s7 !== peg$FAILED) {
							s5 = [s5, s6, s7]
							s4 = s5
						} else {
							peg$currPos = s4
							s4 = peg$FAILED
						}
					} else {
						peg$currPos = s4
						s4 = peg$FAILED
					}
				} else {
					peg$currPos = s4
					s4 = peg$FAILED
				}
				if (s4 === peg$FAILED) {
					s4 = peg$parseElement()
					if (s4 === peg$FAILED) {
						s4 = peg$parseInsert()
					}
				}
				peg$silentFails--
				if (s4 === peg$FAILED) {
					s3 = undefined
				} else {
					peg$currPos = s3
					s3 = peg$FAILED
				}
				if (s3 !== peg$FAILED) {
					if (input.length > peg$currPos) {
						s4 = input.charAt(peg$currPos)
						peg$currPos++
					} else {
						s4 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e7)
						}
					}
					if (s4 !== peg$FAILED) {
						s3 = [s3, s4]
						s2 = s3
					} else {
						peg$currPos = s2
						s2 = peg$FAILED
					}
				} else {
					peg$currPos = s2
					s2 = peg$FAILED
				}
				if (s2 !== peg$FAILED) {
					while (s2 !== peg$FAILED) {
						s1.push(s2)
						s2 = peg$currPos
						s3 = peg$currPos
						peg$silentFails++
						s4 = peg$currPos
						if (input.substr(peg$currPos, 2) === peg$c6) {
							s5 = peg$c6
							peg$currPos += 2
						} else {
							s5 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e6)
							}
						}
						if (s5 !== peg$FAILED) {
							s6 = peg$parseTagName()
							if (s6 !== peg$FAILED) {
								if (input.charCodeAt(peg$currPos) === 62) {
									s7 = peg$c5
									peg$currPos++
								} else {
									s7 = peg$FAILED
									if (peg$silentFails === 0) {
										peg$fail(peg$e5)
									}
								}
								if (s7 !== peg$FAILED) {
									s5 = [s5, s6, s7]
									s4 = s5
								} else {
									peg$currPos = s4
									s4 = peg$FAILED
								}
							} else {
								peg$currPos = s4
								s4 = peg$FAILED
							}
						} else {
							peg$currPos = s4
							s4 = peg$FAILED
						}
						if (s4 === peg$FAILED) {
							s4 = peg$parseElement()
							if (s4 === peg$FAILED) {
								s4 = peg$parseInsert()
							}
						}
						peg$silentFails--
						if (s4 === peg$FAILED) {
							s3 = undefined
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
						if (s3 !== peg$FAILED) {
							if (input.length > peg$currPos) {
								s4 = input.charAt(peg$currPos)
								peg$currPos++
							} else {
								s4 = peg$FAILED
								if (peg$silentFails === 0) {
									peg$fail(peg$e7)
								}
							}
							if (s4 !== peg$FAILED) {
								s3 = [s3, s4]
								s2 = s3
							} else {
								peg$currPos = s2
								s2 = peg$FAILED
							}
						} else {
							peg$currPos = s2
							s2 = peg$FAILED
						}
					}
				} else {
					s1 = peg$FAILED
				}
				if (s1 !== peg$FAILED) {
					s0 = input.substring(s0, peg$currPos)
				} else {
					s0 = s1
				}

				return s0
			}

			function peg$parseAttrs() {
				var s0, s1, s2, s3, s4, s5

				s0 = peg$currPos
				s1 = peg$parse__()
				s2 = []
				s3 = peg$currPos
				s4 = peg$parseValueAttr()
				if (s4 !== peg$FAILED) {
					s5 = peg$parse___()
					if (s5 !== peg$FAILED) {
						peg$savedPos = s3
						s3 = peg$f8(s4)
					} else {
						peg$currPos = s3
						s3 = peg$FAILED
					}
				} else {
					peg$currPos = s3
					s3 = peg$FAILED
				}
				while (s3 !== peg$FAILED) {
					s2.push(s3)
					s3 = peg$currPos
					s4 = peg$parseValueAttr()
					if (s4 !== peg$FAILED) {
						s5 = peg$parse___()
						if (s5 !== peg$FAILED) {
							peg$savedPos = s3
							s3 = peg$f8(s4)
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
					} else {
						peg$currPos = s3
						s3 = peg$FAILED
					}
				}
				s3 = peg$parseValueAttr()
				if (s3 === peg$FAILED) {
					s3 = null
				}
				s4 = peg$parseInsert()
				if (s4 === peg$FAILED) {
					s4 = null
				}
				s5 = peg$parse__()
				peg$savedPos = s0
				s0 = peg$f9(s2, s3, s4)

				return s0
			}

			function peg$parseValueAttr() {
				var s0, s1, s2, s3

				s0 = peg$currPos
				s1 = peg$parseATTR_NAME()
				if (s1 !== peg$FAILED) {
					if (input.charCodeAt(peg$currPos) === 61) {
						s2 = peg$c7
						peg$currPos++
					} else {
						s2 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e8)
						}
					}
					if (s2 !== peg$FAILED) {
						s3 = peg$parseAttrValue()
						if (s3 !== peg$FAILED) {
							peg$savedPos = s0
							s0 = peg$f10(s1, s3)
						} else {
							peg$currPos = s0
							s0 = peg$FAILED
						}
					} else {
						peg$currPos = s0
						s0 = peg$FAILED
					}
				} else {
					peg$currPos = s0
					s0 = peg$FAILED
				}

				return s0
			}

			function peg$parseAttrValue() {
				var s0

				s0 = peg$parseInsert()
				if (s0 === peg$FAILED) {
					s0 = peg$parseQuotedString()
				}

				return s0
			}

			function peg$parseQuotedString() {
				var s0

				s0 = peg$parseDoubleQuotedString()
				if (s0 === peg$FAILED) {
					s0 = peg$parseSingleQuotedString()
				}

				return s0
			}

			function peg$parseDoubleQuotedString() {
				var s0, s1, s2, s3, s4, s5

				s0 = peg$currPos
				if (input.charCodeAt(peg$currPos) === 34) {
					s1 = peg$c8
					peg$currPos++
				} else {
					s1 = peg$FAILED
					if (peg$silentFails === 0) {
						peg$fail(peg$e9)
					}
				}
				if (s1 !== peg$FAILED) {
					s2 = []
					s3 = peg$currPos
					s4 = peg$currPos
					peg$silentFails++
					if (input.charCodeAt(peg$currPos) === 34) {
						s5 = peg$c8
						peg$currPos++
					} else {
						s5 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e9)
						}
					}
					peg$silentFails--
					if (s5 === peg$FAILED) {
						s4 = undefined
					} else {
						peg$currPos = s4
						s4 = peg$FAILED
					}
					if (s4 !== peg$FAILED) {
						if (input.length > peg$currPos) {
							s5 = input.charAt(peg$currPos)
							peg$currPos++
						} else {
							s5 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e7)
							}
						}
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5]
							s3 = s4
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
					} else {
						peg$currPos = s3
						s3 = peg$FAILED
					}
					while (s3 !== peg$FAILED) {
						s2.push(s3)
						s3 = peg$currPos
						s4 = peg$currPos
						peg$silentFails++
						if (input.charCodeAt(peg$currPos) === 34) {
							s5 = peg$c8
							peg$currPos++
						} else {
							s5 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e9)
							}
						}
						peg$silentFails--
						if (s5 === peg$FAILED) {
							s4 = undefined
						} else {
							peg$currPos = s4
							s4 = peg$FAILED
						}
						if (s4 !== peg$FAILED) {
							if (input.length > peg$currPos) {
								s5 = input.charAt(peg$currPos)
								peg$currPos++
							} else {
								s5 = peg$FAILED
								if (peg$silentFails === 0) {
									peg$fail(peg$e7)
								}
							}
							if (s5 !== peg$FAILED) {
								s4 = [s4, s5]
								s3 = s4
							} else {
								peg$currPos = s3
								s3 = peg$FAILED
							}
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
					}
					if (input.charCodeAt(peg$currPos) === 34) {
						s3 = peg$c8
						peg$currPos++
					} else {
						s3 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e9)
						}
					}
					if (s3 !== peg$FAILED) {
						s1 = [s1, s2, s3]
						s0 = s1
					} else {
						peg$currPos = s0
						s0 = peg$FAILED
					}
				} else {
					peg$currPos = s0
					s0 = peg$FAILED
				}

				return s0
			}

			function peg$parseSingleQuotedString() {
				var s0, s1, s2, s3, s4, s5

				s0 = peg$currPos
				if (input.charCodeAt(peg$currPos) === 39) {
					s1 = peg$c9
					peg$currPos++
				} else {
					s1 = peg$FAILED
					if (peg$silentFails === 0) {
						peg$fail(peg$e10)
					}
				}
				if (s1 !== peg$FAILED) {
					s2 = []
					s3 = peg$currPos
					s4 = peg$currPos
					peg$silentFails++
					if (input.charCodeAt(peg$currPos) === 39) {
						s5 = peg$c9
						peg$currPos++
					} else {
						s5 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e10)
						}
					}
					peg$silentFails--
					if (s5 === peg$FAILED) {
						s4 = undefined
					} else {
						peg$currPos = s4
						s4 = peg$FAILED
					}
					if (s4 !== peg$FAILED) {
						if (input.length > peg$currPos) {
							s5 = input.charAt(peg$currPos)
							peg$currPos++
						} else {
							s5 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e7)
							}
						}
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5]
							s3 = s4
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
					} else {
						peg$currPos = s3
						s3 = peg$FAILED
					}
					while (s3 !== peg$FAILED) {
						s2.push(s3)
						s3 = peg$currPos
						s4 = peg$currPos
						peg$silentFails++
						if (input.charCodeAt(peg$currPos) === 39) {
							s5 = peg$c9
							peg$currPos++
						} else {
							s5 = peg$FAILED
							if (peg$silentFails === 0) {
								peg$fail(peg$e10)
							}
						}
						peg$silentFails--
						if (s5 === peg$FAILED) {
							s4 = undefined
						} else {
							peg$currPos = s4
							s4 = peg$FAILED
						}
						if (s4 !== peg$FAILED) {
							if (input.length > peg$currPos) {
								s5 = input.charAt(peg$currPos)
								peg$currPos++
							} else {
								s5 = peg$FAILED
								if (peg$silentFails === 0) {
									peg$fail(peg$e7)
								}
							}
							if (s5 !== peg$FAILED) {
								s4 = [s4, s5]
								s3 = s4
							} else {
								peg$currPos = s3
								s3 = peg$FAILED
							}
						} else {
							peg$currPos = s3
							s3 = peg$FAILED
						}
					}
					if (input.charCodeAt(peg$currPos) === 39) {
						s3 = peg$c9
						peg$currPos++
					} else {
						s3 = peg$FAILED
						if (peg$silentFails === 0) {
							peg$fail(peg$e10)
						}
					}
